--- a/src/app/pages/visualizar-agenda/agenda/agenda.component.css
+++ b/src/app/pages/visualizar-agenda/agenda/agenda.component.css
@@ -14,6 +14,7 @@ li {
   padding: 0;
 }
 
+
 b { /* used for event dates/times */
   margin-right: 3px;
 }
@@ -22,12 +23,12 @@ b { /* used for event dates/times */
   display: flex;
   min-height: 100%;
   font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
-  font-size: 14px;
+  font-size: 10px;
 }
 
 .fc-toolbar {
   .fc-center h2 {
-      font-size: 1.25em
+      font-size: 0.5em
   }
   display: block;
   text-align: center;
@@ -69,13 +70,9 @@ b { /* used for event dates/times */
   }
 }
 
-
-
 .demo-app-sidebar {
   width: auto;
   line-height: 1.5;
-  background: #ecececa2;
-  border-right: 1px solid #c4d8d3;
 }
 
 .demo-app-sidebar-section {
@@ -88,9 +85,8 @@ b { /* used for event dates/times */
 }
 
 .fc { /* the calendar root */
-  max-width: 1100px;
   margin: 0 auto;
-  height: 475px;
+  height: auto;
 }
 
 /* Oculta a barra de rolagem vertical */
@@ -111,6 +107,7 @@ b { /* used for event dates/times */
   display: flex;
   align-items: center;
   margin-bottom: 10px;
+  margin-left: 10px;
 }
 .cor-box {
   width: 20px;
