--- a/src/app/pages/atendimento/buscar-atendimento/buscar-atendimento.component.scss
+++ b/src/app/pages/atendimento/buscar-atendimento/buscar-atendimento.component.scss
@@ -17,6 +17,7 @@
   }
 }
 
+
 :host ::ng-deep .ngx-datatable.bootstrap {
   border: 1px solid #d1d4d7;
   box-shadow: 0 1px 2px 0 rgba(50,50,50,.2);
@@ -112,6 +113,18 @@ background-color: #07c28373;
 /* Estilo padrão para dispositivos não móveis */
 .card {
   height: auto;
+}
+.arrow {
+  display: inline-block;
+  transition: transform 0.2s;
+}
+
+.collapse:not(.show) .arrow {
+  transform: rotate(-90deg);
+}
+
+.collapse.show .arrow {
+  transform: rotate(0deg);
 }
 
 /* Estilos para o loader */
@@ -232,6 +245,18 @@ nb-checkbox {
   nb-card.inline-form-card nb-card-body {
     padding-bottom: 0;
   }
+
+  .legend {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-end;
+  }
+  
+  .legend p {
+    margin-right: 15px; /* Ajuste conforme necessário */
+    margin-bottom: 10px; /* Ajuste conforme necessário */
+  }
+  
 
 @include nb-install-component() {
 
