--- a/src/app/pages/login/login.component.scss
+++ b/src/app/pages/login/login.component.scss
@@ -13,8 +13,8 @@
 .loader {
   position: fixed;
   top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  left: 47%;
+  /* Removido transform daqui */
   border: 16px solid rgb(114, 124, 245); /* Azul claro */
   border-top: 16px solid rgb(57, 176, 218); /* Azul mais escuro */
   border-radius: 50%;
@@ -25,9 +25,14 @@
 }
 
 @keyframes spin {
-  0% { transform: rotate(0deg); }
-  100% { transform: rotate(360deg); }
+  0% { 
+    transform: translate(-50%, -50%) rotate(0deg); 
+  }
+  100% { 
+    transform: translate(-50%, -50%) rotate(360deg); 
+  }
 }
+
 
 
 @keyframes spin {
