--- a/src/app/pages/visualizar-agenda/agenda/agenda.component.css
+++ b/src/app/pages/visualizar-agenda/agenda/agenda.component.css
@@ -62,6 +62,31 @@ b { /* used for event dates/times */
   100% { transform: rotate(360deg); }
 }
 
+@media (min-width: 768px) {
+  .mobile {
+    display: block; /* ou qualquer outra propriedade de exibição que você deseja usar */
+  }
+}
+
+@media (max-width: 767px) {
+  .mobile {
+    display: none; /* Isso ocultará o contêiner em dispositivos móveis */
+  }
+}
+
+/* Estilo padrão para desktop */
+.legend span {
+  font-size: 12px; /* ou o tamanho que você preferir para desktop */
+}
+
+/* Estilo para dispositivos móveis */
+@media (max-width: 767px) {
+  .legend span {
+    font-size: 10px; /* ou o tamanho que você preferir para mobile */
+  }
+}
+
+
 
 /* Estilos específicos para telas com largura máxima de 768px (dispositivos móveis) */
 @media screen and (max-width: 768px) {
@@ -83,7 +108,6 @@ b { /* used for event dates/times */
     left: 0;
   }
 }
-
 
 .demo-app-sidebar {
   width: auto;
