--- a/src/app/pages/visualizar-agenda/agenda/agenda.component.html
+++ b/src/app/pages/visualizar-agenda/agenda/agenda.component.html
@@ -5,11 +5,11 @@
       <div class="dialog-body">
         <nb-card>
           <nb-card-body>
-            <form id=“form-buscar-atendimento” [formGroup]="formAgendaAtendimento">
+            <div class="form-group col-md-4">
+              <h5 class="ml-lg-n3">Calendario de Atendimento</h5>
+            </div>
+            <form id=“form-buscar-atendimento” [formGroup]="formAgendaAtendimento"  class="mobile" >
               <div class="col-md-12 col-xs-12">
-                  <div class="form-group col-md-4">
-                    <h5 class="ml-lg-n3">Atendimento</h5>
-                  </div>
                   <div class="form-row">
                     <div class="form-group col-md-3">
                       <label for="medico">Escolha o médico*</label>
@@ -49,6 +49,13 @@
               </div>
             </form>
             <div class="col-md-12 col-xs-12">
+              
+
+              <div class='form group demo-app-sidebar'>
+                <full-calendar *ngIf='calendarVisible' [options]='calendarOptions' [plugins]="calendarPlugins"
+                   [events]="calendarEvents">
+                </full-calendar>
+              </div>
 
               <h5>Legenda:</h5>
               <div class="legend d-flex flex-wrap">
@@ -74,13 +81,6 @@
                 </div>
               </div>
               
-              
-
-              <div class='form group demo-app-sidebar'>
-                <full-calendar *ngIf='calendarVisible' [options]='calendarOptions' [plugins]="calendarPlugins"
-                  [initialView]="'timeGridWeek'" [events]="calendarEvents">
-                </full-calendar>
-              </div>
             </div>
           </nb-card-body>
         </nb-card>
