--- a/src/app/pages/configurar-agenda/parametrizar-consulta/parametrizar-consulta.component.html
+++ b/src/app/pages/configurar-agenda/parametrizar-consulta/parametrizar-consulta.component.html
@@ -1,3 +1,4 @@
+<div class="loader" *ngIf="isLoader"></div>
 <div class="container-fluid">
   <div class="row">
     <div class="col-md-12 col-xs-12">
@@ -24,7 +25,7 @@
                       <div>
                         <label for="nome">Escolha o médico*</label>
                         <select class="form-control" formControlName="medico"
-                          (change)="verificaValor($event.target.value)">
+                          (change)="SelectedMedico($event.target.value)">
                           <option value="null" selected>SELECIONE</option>
                           <option *ngFor="let medico of listMedico" value="{{ medico.id }}">{{
                             medico.name}}</option>
@@ -36,11 +37,11 @@
                     <div class="form-group">
                       <div class="div-medico">
                         <label for="clinica">Escolha a clínica*</label>
-                        <select class="form-control" formControlName="clinica"
-                          (change)="verificaClinica($event.target.value)">
+                        <select class="form-control" formControlName="clinica">
+                          (change)="SelectedClinica($event.target.value)">
                           <option value="null" selected>SELECIONE</option>
                           <option *ngFor="let clinica of listClinica" value="{{ clinica.id }}">{{
-                            clinica.socialName}}</option>
+                            clinica.name}}</option>
                         </select>
                       </div>
                     </div>
@@ -319,7 +320,7 @@
               </div>
               <div class="text-right" *ngIf="ismodalidadeConsulta">
                 <button class="btn btn-success" (click)="salvar(formParametrizarConsulta.value)">
-                  SALVAR
+                  Salvar
                 </button>
               </div>
             </form>
@@ -329,15 +330,4 @@
     </div>
   </div>
 </div>
-<div #card>
-  <div class="col-md-12 col-xs-12">
-    <div class="row" *ngIf="isActive" class="loader">
-      <div class="text-center" style="margin-top: -300px;margin-right: 40px;">
-        <button class="btn btn-primary" type="button" disabled>
-          <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
-          Carregando...
-        </button>
-      </div>
-    </div>
-  </div>
-</div>
+
